Snes9x4D (for DINGUX) v20100330
===============================
(c)^SiENcE^2010.03.30

Hint: I removed a speedhack from old 1.39 source, just because it only fakes fps.

ver 20100330
+renamed from Snes9x to Snes9x4D (for Dingux)
+new Snes9x4D Icon added
+Fullscreen Scaling added again for Normal Mode
+Autodetect Highres Games (Secret of Mana, Seiken 3 & Rudra no Hihou) and switch automatically to HighRes Mode
+Scaling is not available in HighRes Mode (Menu-Option inactive)

ver 20100315
+SA-1 Support added (Super Mario RPG, and all other SA-1 Games are working!!!)
(Savestates of SA-1 Games are untested (better only use InGames saves!)

+"-nohi" or "-nohires" commandline option added
+"-hi" or "-hires" commandline option added
+transparency Option removed, doesn't affect speed
+memory leak in Menu fixed

ver 20100313
+screenshot feature fixed (in highres mode screenshots still are not fullscreen caps)

ver 20100301
+Soul Blazer works now (i think only the german version was not working!?)

ver 20100224
+Transparency Menu Option added
+Zipped ROMs Support
+HighRes Support enabled (solves Secret of Mana, Seiken 3 & Rudra no Hihou font problems)

ver 20100221
+support for SDD1 Emu added (GraphicPack NOT needed anymore!! -> removed)
+Street Fighter Alpha 2 & Star Ocean (all work)

v1.39-ff
-base source see changes.txt

Blog:
http://crankgaming.blogspot.com/

Sources:
svn://zwischenwelt.org:20684/dingoo/Snes9x-sdl-1.39ff

Original port taken from:
http://www9.atpages.jp/~drowsnug95/?p=252
http://www9.atpages.jp/~drowsnug95/wp-content/uploads/2009/10/snes9x_src.zip

Contact:
seabeams at gmx.de

^SiENcE